--- a/public/stylesheets/video.css
+++ b/public/stylesheets/video.css
@@ -17,19 +17,44 @@ body {
     background-color: #ff9900;
 }
 
+.main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
 #videoPlayer {
-    position: absolute;
-    top: 0;
+    position: relative;
+    align-self: center;
+    top: 2vw;
     bottom: 0;
-    left: 0;
+    left: 2vw;
     right: 0;
+    text-align: center;
     margin: auto;
     width: 60%;
-    height: auto;
+    /* height: auto; */
     border: 2px solid #FF9900;
 }
 
-@media screen and (max-width: 1024px) {
+.player {
+    top: 2vw;
+}
+
+.vid_desc {
+    color: white;
+    top: 3vw;
+    bottom: 187px;
+    left: 0;
+    right: 0;
+    position: relative;
+    align-self: center;
+    /* text-align: center; */
+    width: 61%;
+    margin: auto;}
+
+@media screen and (max-width: 624px) {
     #videoplayer {
         width: 100%;
         height: auto;
