--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,9 +8,6 @@
 	<div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav">
 			<li class="nav-item active">
-				<a class="nav-link" href="#">home<span class="sr-only">(current)</span></a>
-			</li>
-			<li class="nav-item active">
 				<a class="nav-link" href="/login">login</a>
 			</li>
 			<li class="nav-item active">
@@ -27,4 +24,4 @@
 	<span>Hyper</span>
 	<span>Tube</span>
 </div>
-<a href="/home"><button type="button" class="btn btn-outline-primary">Get Started</button></a>
+<a href="/home"><button type="button" class="btn btn-outline-primary">WATCH</button></a>
