--- a/views/video.hbs
+++ b/views/video.hbs
@@ -43,7 +43,7 @@
 <div class="main">
 	<div class='player'>
 		<video poster="" id="videoPlayer" class="video-js vjs-default-skin vjs-fill" controls preload="metadata">
-			<source src="http://localhost:8080/video" type="video/mp4">
+			<source src="/video" type="video/mp4">
 			Your browser does not support the video tag.
 			{{#each subtitles}}
 				<track kind='captions' src='{{this.path}}' srclang='{{this.langShort}}' label='{{this.lang}}' />
